# wasm-faas

./: README.md  build.sh  compile-rs.sh
examples/hello-world-as/assembly/: index.ts
examples/hello-world-rs/: Cargo.toml
examples/hello-world-rs/src/: main.rs
examples/option-pricing-as/: package-lock.json
public/: index.html  index.js  run-rustc.sh
wasm-faas/: Cargo.toml
wasm-faas/src/: main.rs
