[package]
name = "wasm-faas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0"
wasmtime = "9.0.1"
wasmtime-wasi = "9.0.1"
wasi-common = "9.0.1"
duct = "0.13.6"
actix-files = "0.6.2"
zstd-sys = "2.0.8+zstd.1.5.5"
json = "0.12.4"
serde = "1.0.163"
serde_json = "1.0.96"
futures-util = "0.3.28"
base64 = "0.21.2"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
